--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
