--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "13.12.0"
+  },
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
+    "start": "node index.js",
+    "dev": "nodemon --exec babel-node -r dotenv/config index.js",
     "build": "babel src -d dist",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,9 +20,9 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.8.1",
+    "helmet": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
@@ -30,6 +35,7 @@
     "@babel/node": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
+    "dotenv": "^8.2.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.1.0",
