--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,8 @@
     "clean": "rm -Rf dist",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
-    "start": "node dist/App.js",
-    "dev": "nodemon --exec babel-node -r dotenv/config src/App.js",
+    "start": "node dist",
+    "dev": "nodemon --exec babel-node -r dotenv/config src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
