--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -Rf dist",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
-    "start": "node dist",
+    "start": "pm2 start dist",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +28,7 @@
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "pm2": "^4.5.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
