--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -Rf dist",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
-    "start": "pm2-runtime start ecosystem.config.js --env dist",
+    "start": "pm2 start ecosystem.config.js --env production",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
