--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -Rf dist",
     "build": "npm run clean && babel src --out-dir dist --copy-files",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run build",
-    "start": "pm2 start ecosystem.config.js --env production",
+    "start": "node dist",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,7 +28,7 @@
     "mongoose": "^5.11.8",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pm2": "^4.5.1",
+    "regenerator-runtime": "^0.13.7",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -45,7 +45,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.0",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   }
 }
