--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.6",
     "@ng-bootstrap/ng-bootstrap": "^8.0.2",
     "@ng-select/ng-select": "^5.0.15",
+    "@ngrx/effects": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^4.5.3",
     "classlist.js": "^1.1.20150312",
