--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,19 @@
 {
   "name": "client",
   "version": "0.0.0",
+  "engines": {
+    "node": "15.5.1",
+    "typescript": "~4.0.2"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
