--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,5 +1,8 @@
 {
   "presets": ["@babel/preset-env", "minify"],
-  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "transform-remove-console"
+  ],
   "comments": false
 }
