--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,8 +1,5 @@
 {
   "presets": ["@babel/preset-env", "minify"],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "transform-remove-console"
-  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
   "comments": false
 }
