--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,10 @@
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^8.0.2",
     "@ng-select/ng-select": "^5.0.15",
     "@ngrx/component": "^10.1.2",
@@ -38,7 +42,10 @@
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "ng-click-outside": "^7.0.1",
+    "ng2-file-upload": "^1.4.0",
+    "ngrx-store-localstorage": "^10.1.2",
     "ngx-device-detector": "^2.0.5",
+    "ngx-image-cropper": "^3.3.4",
     "ngx-perfect-scrollbar": "^10.1.0",
     "ngx-spinner": "^10.0.1",
     "ngx-swiper-wrapper": "^10.0.0",
