added users pages and store

--- a/client/angular.json
+++ b/client/angular.json
@@ -31,6 +31,8 @@
             "styles": [
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@swimlane/ngx-datatable/index.css",
+              "node_modules/@swimlane/ngx-datatable/assets/icons.css",
               "src/assets/css/animate.min.css",
               "src/assets/css/demo.css",
               "src/assets/sass/core.scss",
