--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
+    "@swimlane/ngx-datatable": "^19.0.0",
     "bootstrap": "^4.5.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^3.6.5",
