added posts pages and store

--- a/client/angular.json
+++ b/client/angular.json
@@ -33,6 +33,8 @@
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/@swimlane/ngx-datatable/index.css",
               "node_modules/@swimlane/ngx-datatable/assets/icons.css",
+              "src/assets/css/quill.snow.css",
+              "src/assets/css/quill.bubble.css",
               "src/assets/css/animate.min.css",
               "src/assets/css/demo.css",
               "src/assets/sass/core.scss",
