--- a/client/package.json
+++ b/client/package.json
@@ -48,6 +48,7 @@
     "ngx-device-detector": "^2.0.5",
     "ngx-image-cropper": "^3.3.4",
     "ngx-perfect-scrollbar": "^10.1.0",
+    "ngx-quill": "^13.2.0",
     "ngx-spinner": "^10.0.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^13.2.0",
